--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "19.2.13",
-    "@angular/compiler": "19.2.13",
-    "@angular/core": "19.2.13",
-    "@angular/forms": "19.2.13",
-    "@angular/platform-browser": "19.2.13",
-    "@angular/platform-browser-dynamic": "19.2.13",
-    "@angular/router": "19.2.13",
-    "@angular/service-worker": "19.2.13",
+    "@angular/common": "^19.2.13",
+    "@angular/compiler": "^19.2.13",
+    "@angular/core": "^19.2.13",
+    "@angular/forms": "^19.2.13",
+    "@angular/platform-browser": "^19.2.13",
+    "@angular/platform-browser-dynamic": "^19.2.13",
+    "@angular/router": "^19.2.13",
+    "@angular/service-worker": "^19.2.13",
     "@primeng/themes": "^19.1.3",
     "ngx-cookie-service": "^19.1.2",
     "primeflex": "^4.0.0",
