--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.13",
     "@angular/service-worker": "^19.2.13",
     "@primeng/themes": "^19.1.3",
+    "crypto-js": "^4.2.0",
     "ngx-cookie-service": "^19.1.2",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
@@ -31,6 +32,7 @@
     "@angular-devkit/build-angular": "19.2.13",
     "@angular/cli": "19.2.13",
     "@angular/compiler-cli": "19.2.13",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
