--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.13",
     "@angular/service-worker": "^19.2.13",
     "@ngrx/store": "^19.2.1",
+    "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.1.3",
     "crypto-js": "^4.2.0",
     "ngx-cookie-service": "^19.1.2",
