--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.1.3",
     "crypto-js": "^4.2.0",
+    "jalali-ts": "^8.0.0",
+    "ng-persian-datepicker": "^10.0.0",
     "ngx-cookie-service": "^19.1.2",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
