--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^19.2.13",
-    "@angular/compiler": "^19.2.13",
-    "@angular/core": "^19.2.13",
-    "@angular/forms": "^19.2.13",
-    "@angular/platform-browser": "^19.2.13",
-    "@angular/platform-browser-dynamic": "^19.2.13",
-    "@angular/router": "^19.2.13",
-    "@angular/service-worker": "^19.2.13",
+    "@angular/common": "^20.1.2",
+    "@angular/compiler": "^20.1.2",
+    "@angular/core": "^20.1.2",
+    "@angular/forms": "^20.1.2",
+    "@angular/platform-browser": "^20.1.2",
+    "@angular/platform-browser-dynamic": "^20.1.2",
+    "@angular/router": "^20.1.2",
+    "@angular/service-worker": "^20.1.2",
     "@ngrx/store": "^19.2.1",
     "@ngrx/store-devtools": "^19.2.1",
     "@primeng/themes": "^19.1.3",
@@ -34,9 +34,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.13",
-    "@angular/cli": "19.2.13",
-    "@angular/compiler-cli": "19.2.13",
+    "@angular/build": "^20.1.1",
+    "@angular/cli": "20.1.1",
+    "@angular/compiler-cli": "20.1.2",
     "@compodoc/compodoc": "^1.1.26",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
@@ -48,6 +48,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.2"
+    "typescript": "~5.8.3"
   }
 }
