--- a/package.json
+++ b/package.json
@@ -19,16 +19,15 @@
     "@angular/platform-browser-dynamic": "^20.1.2",
     "@angular/router": "^20.1.2",
     "@angular/service-worker": "^20.1.2",
-    "@ngrx/store": "^19.2.1",
-    "@ngrx/store-devtools": "^19.2.1",
-    "@primeng/themes": "^19.1.3",
+    "@ngrx/store": "20.0.0-rc.0",
+    "@primeng/themes": "20.0.0",
     "crypto-js": "^4.2.0",
     "jalali-ts": "^8.0.0",
     "ng-persian-datepicker": "^10.0.0",
-    "ngx-cookie-service": "^19.1.2",
+    "ngx-cookie-service": "20.0.1",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primeng": "^19.1.3",
+    "primeng": "20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -38,6 +37,7 @@
     "@angular/cli": "20.1.1",
     "@angular/compiler-cli": "20.1.2",
     "@compodoc/compodoc": "^1.1.26",
+    "@ngrx/store-devtools": "20.0.0-rc.0",
     "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
