--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "@angular/service-worker": "^20.1.2",
     "@ngrx/store": "20.0.0-rc.0",
     "@primeng/themes": "20.0.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "crypto-js": "^4.2.0",
     "jalali-ts": "^8.0.0",
     "ng-persian-datepicker": "^10.0.0",
     "ngx-cookie-service": "20.0.1",
-    "primeflex": "^4.0.0",
+    "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
     "primeng": "20.0.0",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^4.1.11",
+    "tailwindcss-primeui": "^0.6.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
