--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     "@angular/cli": "20.1.1",
     "@angular/compiler-cli": "20.1.6",
     "@compodoc/compodoc": "^1.1.26",
+    "@eslint/js": "^9.33.0",
     "@ngrx/store-devtools": "20.0.0-rc.0",
     "@types/crypto-js": "^4.2.2",
+    "@types/eslint": "^9.6.1",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
+    "angular-eslint": "20.1.1",
+    "eslint": "^9.33.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -53,6 +57,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.6.2",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.39.0"
   }
 }
