fix(package.json, angular.json): update budget limits and enhance source map exploration configuration

--- a/angular.json
+++ b/angular.json
@@ -44,8 +44,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "500MB",
+                  "maximumError": "10MB"
                 },
                 {
                   "type": "anyComponentStyle",
@@ -59,7 +59,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true,
+              "sourceMap": {
+                "scripts": true,
+                "styles": true,
+                "sourcesContent": true,
+                "hidden": true,
+                "vendor": true
+              },
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
