--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "compodoc": "compodoc -p tsconfig.json -s -o",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "explore": "source-map-explorer dist/**/*.js"
   },
   "private": true,
   "dependencies": {
@@ -57,6 +58,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "^3.6.2",
+    "source-map-explorer": "^2.5.3",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0"
   }
