feat(/)[angular.json + package-lock.json + package.json]: add some new packages for animation

--- a/package.json
+++ b/package.json
@@ -22,10 +22,18 @@
     "@angular/router": "^20.1.2",
     "@angular/service-worker": "^20.1.6",
     "@ngrx/store": "20.0.0-rc.0",
+    "@omnedia/ngx-fade": "^3.0.0",
+    "@omnedia/ngx-number-ticker": "^3.0.0",
+    "@omnedia/ngx-retro-grid": "^3.0.0",
+    "@omnedia/ngx-shiny-text": "^3.0.0",
+    "@omnedia/ngx-starry-sky": "^3.0.3",
+    "@omnedia/ngx-vortex": "^3.0.1",
     "@primeng/themes": "20.0.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/leaflet": "^1.9.20",
     "crypto-js": "^4.2.0",
     "jalali-ts": "^8.0.0",
+    "leaflet": "^1.9.4",
     "ng-persian-datepicker": "^10.0.0",
     "ngx-cookie-service": "20.0.1",
     "postcss": "^8.5.6",
