--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^20.3.7",
     "@angular/router": "^20.3.7",
     "@angular/service-worker": "^20.3.7",
-    "@ngrx/store": "20.0.0-rc.0",
+    "@ngrx/store": "20.1.0",
     "@omnedia/ngx-fade": "^3.0.0",
     "@omnedia/ngx-number-ticker": "^3.0.0",
     "@omnedia/ngx-retro-grid": "^3.0.0",
@@ -51,13 +51,13 @@
     "@angular/compiler-cli": "20.3.7",
     "@compodoc/compodoc": "^1.1.26",
     "@eslint/js": "^9.33.0",
-    "@ngrx/store-devtools": "20.0.0-rc.0",
+    "@ngrx/store-devtools": "20.1.0",
     "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^9.6.1",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
-    "angular-eslint": "20.1.1",
+    "angular-eslint": "20.4.0",
     "eslint": "^9.33.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
