--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.9",
-    "@angular/compiler": "^20.3.9",
-    "@angular/core": "^20.3.9",
-    "@angular/forms": "^20.3.9",
-    "@angular/platform-browser": "^20.3.9",
-    "@angular/platform-browser-dynamic": "^20.3.9",
-    "@angular/router": "^20.3.9",
-    "@angular/service-worker": "^20.3.9",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/core": "^21.0.1",
+    "@angular/forms": "^21.0.1",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/platform-browser-dynamic": "^21.0.1",
+    "@angular/router": "^21.0.1",
+    "@angular/service-worker": "^21.0.1",
     "@ngrx/store": "20.1.0",
-    "@omnedia/ngx-fade": "^3.0.0",
-    "@omnedia/ngx-number-ticker": "^3.0.0",
-    "@omnedia/ngx-retro-grid": "^3.0.0",
-    "@omnedia/ngx-shiny-text": "^3.0.0",
-    "@omnedia/ngx-starry-sky": "^3.0.3",
-    "@omnedia/ngx-vortex": "^3.0.1",
-    "@primeng/themes": "20.0.0",
+    "@omnedia/ngx-fade": "^4.0.0",
+    "@omnedia/ngx-number-ticker": "^4.0.0",
+    "@omnedia/ngx-retro-grid": "^4.0.0",
+    "@omnedia/ngx-shiny-text": "^4.0.0",
+    "@omnedia/ngx-starry-sky": "^4.0.0",
+    "@omnedia/ngx-vortex": "^4.0.0",
+    "@primeng/themes": "21.0.0-beta.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "crypto-js": "^4.2.0",
     "jalali-ts": "^8.0.0",
     "leaflet": "^1.9.4",
     "ng-persian-datepicker": "^10.0.0",
-    "ngx-cookie-service": "20.0.1",
+    "ngx-cookie-service": "^21.1.0",
     "postcss": "^8.5.6",
     "primeicons": "^7.0.0",
-    "primeng": "20.0.0",
+    "primeng": "21.0.0-beta.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
     "tailwindcss-primeui": "^0.6.1",
@@ -46,9 +46,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.8",
-    "@angular/cli": "20.3.8",
-    "@angular/compiler-cli": "20.3.9",
+    "@angular/build": "^21.0.1",
+    "@angular/cli": "21.0.1",
+    "@angular/compiler-cli": "21.0.1",
     "@compodoc/compodoc": "^1.1.26",
     "@eslint/js": "^9.33.0",
     "@ngrx/store-devtools": "20.1.0",
@@ -65,9 +65,51 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.3",
     "prettier": "^3.6.2",
     "source-map-explorer": "^2.5.3",
-    "typescript": "~5.8.3",
+    "typescript": "~5.9.3",
     "typescript-eslint": "^8.39.0"
+  },
+  "overrides": {
+    "@ngrx/store": {
+      "@angular/common": "$@angular/common",
+      "@angular/core": "$@angular/core"
+    },
+    "@ngrx/store-devtools": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-fade": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-number-ticker": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-retro-grid": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-shiny-text": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-starry-sky": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    },
+    "@omnedia/ngx-vortex": {
+      "@angular/core": "$@angular/core",
+      "@angular/common": "$@angular/common",
+      "rxjs": "$rxjs"
+    }
   }
 }
