--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
 name: CI
 
 on:
-  push:
-    branches: [ci-test]
   pull_request:
-    branches: [ci-test]
+    branches: [main]
 
 jobs:
   build-and-test:
