--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.3",
-    "@angular/common": "^21.0.3",
-    "@angular/compiler": "^21.0.3",
-    "@angular/core": "^21.0.3",
-    "@angular/forms": "^21.0.3",
-    "@angular/platform-browser": "^21.0.3",
-    "@angular/platform-browser-dynamic": "^21.0.3",
-    "@angular/router": "^21.0.3",
-    "@angular/service-worker": "^21.0.3",
+    "@angular/animations": "^21.0.5",
+    "@angular/common": "^21.0.5",
+    "@angular/compiler": "^21.0.5",
+    "@angular/core": "^21.0.5",
+    "@angular/forms": "^21.0.5",
+    "@angular/platform-browser": "^21.0.5",
+    "@angular/platform-browser-dynamic": "^21.0.5",
+    "@angular/router": "^21.0.5",
+    "@angular/service-worker": "^21.0.5",
     "@ngrx/store": "21.0.0-beta.0",
     "@omnedia/ngx-fade": "^4.0.1",
     "@omnedia/ngx-number-ticker": "^4.0.1",
@@ -47,9 +47,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.2",
-    "@angular/cli": "21.0.2",
-    "@angular/compiler-cli": "21.0.3",
+    "@angular/build": "^21.0.3",
+    "@angular/cli": "21.0.3",
+    "@angular/compiler-cli": "21.0.5",
     "@compodoc/compodoc": "^1.1.26",
     "@eslint/js": "^9.33.0",
     "@ngrx/store-devtools": "21.0.0-beta.0",
@@ -58,7 +58,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
-    "angular-eslint": "21.0.1",
+    "angular-eslint": "21.1.0",
     "eslint": "^9.33.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
@@ -71,5 +71,9 @@
     "source-map-explorer": "^2.5.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.39.0"
+  },
+  "overrides": {
+    "glob": "^13.0.0",
+    "rimraf": "^6.1.2"
   }
 }
