--- a/package.json
+++ b/package.json
@@ -13,28 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.5",
-    "@angular/common": "^21.0.5",
-    "@angular/compiler": "^21.0.5",
-    "@angular/core": "^21.0.5",
-    "@angular/forms": "^21.0.5",
-    "@angular/platform-browser": "^21.0.5",
-    "@angular/platform-browser-dynamic": "^21.0.5",
-    "@angular/router": "^21.0.5",
-    "@angular/service-worker": "^21.0.5",
-    "@ngrx/store": "21.0.0-beta.0",
+    "@angular/animations": "^21.0.6",
+    "@angular/common": "^21.0.6",
+    "@angular/compiler": "^21.0.6",
+    "@angular/core": "^21.0.6",
+    "@angular/forms": "^21.0.6",
+    "@angular/platform-browser": "^21.0.6",
+    "@angular/platform-browser-dynamic": "^21.0.6",
+    "@angular/router": "^21.0.6",
+    "@angular/service-worker": "^21.0.6",
+    "@ngrx/store": "21.0.1",
     "@omnedia/ngx-fade": "^4.0.1",
     "@omnedia/ngx-number-ticker": "^4.0.1",
     "@omnedia/ngx-retro-grid": "^4.0.1",
     "@omnedia/ngx-shiny-text": "^4.0.1",
     "@omnedia/ngx-starry-sky": "^4.0.1",
     "@omnedia/ngx-vortex": "^4.0.1",
-    "@primeng/themes": "^21.0.1",
+    "@primeuix/themes": "^2.0.2",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/leaflet": "^1.9.20",
     "crypto-js": "^4.2.0",
     "jalali-ts": "^8.0.0",
     "leaflet": "^1.9.4",
+    "ng-otp-input": "^2.0.9",
     "ng-persian-datepicker": "^10.0.0",
     "ngx-cookie-service": "^21.1.0",
     "postcss": "^8.5.6",
@@ -47,12 +48,12 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "21.0.3",
-    "@angular/compiler-cli": "21.0.5",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "21.0.4",
+    "@angular/compiler-cli": "21.0.6",
     "@compodoc/compodoc": "^1.1.32",
     "@eslint/js": "^9.33.0",
-    "@ngrx/store-devtools": "21.0.0-beta.0",
+    "@ngrx/store-devtools": "21.0.1",
     "@types/crypto-js": "^4.2.2",
     "@types/eslint": "^9.6.1",
     "@types/jasmine": "~5.1.0",
