--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^3.6.2",
     "source-map-explorer": "^2.5.3",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.39.0"
+    "typescript-eslint": "^8.39.0",
+    "zod": "^4.2.1"
   }
 }
