--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           host: 192.168.1.9  # Use your server's internal IP
           username: root
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.PRIVATEKEYTOSSH }}
           port: 2280
           script: |
             # 1. Setup Environment (Node v24)
