--- a/.gitea/workflows/deploy.yaml
+++ b/.gitea/workflows/deploy.yaml
@@ -6,30 +6,38 @@ on:
      
 jobs:
   deploy:
-    runs-on: local-host 
+    runs-on: local-host
+    timeout-minutes: 10
     steps:
-      - name: Execute Remote Commands via SSH
-        uses: https://github.com/appleboy/ssh-action@master
-        with:
-          host: 192.168.1.9  # Use your server's internal IP
-          username: root
-          key: ${{ secrets.PRIVATEKEYTOSSH }}
-          port: 2280
-          script: |
+      - name: 🛠️ Setup Environment and Update Code
+        run: |
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm use 24
+          cd /home/bpt-user/Downloads/Panel/
+          
+          git fetch origin main
+          git reset --hard origin/main
+      
+      - name: 📦 Install Dependencies
+        run: |
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm use 24
+          cd /home/bpt-user/Downloads/Panel/
+          
+          if [ ! -d "node_modules" ]; then
+            npm install
+          else
+            npm install --prefer-offline --no-audit
+          fi
+       
+       - name: 🏗️ Angular Build
+         run: |
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-            
             nvm use 24
-
             cd /home/bpt-user/Downloads/Panel/
-            git fetch origin main
-            git reset --hard origin/main 
-            
-            if npm ci; then
-              echo "Packages installed successfully"
-            else
-              echo "npm ci failed" && exit 1
-            fi
             
             cp ../environment.ts ./src/environments/
 
@@ -38,7 +46,9 @@ jobs:
             else
               echo "Build failed" && exit 1
             fi
-
+          
+       - name: 🚀 Deploy to Nginx
+         run: |
             if sudo nginx -s reload; then
               echo "Nginx reloaded successfully"
             else
