--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^21.0.5",
-    "@angular/common": "^21.0.5",
-    "@angular/compiler": "^21.0.5",
-    "@angular/core": "^21.0.5",
-    "@angular/forms": "^21.0.5",
-    "@angular/platform-browser": "^21.0.5",
-    "@angular/platform-browser-dynamic": "^21.0.5",
-    "@angular/router": "^21.0.5",
-    "@angular/service-worker": "^21.0.5",
+    "@angular/animations": "^21.1.1",
+    "@angular/common": "^21.1.1",
+    "@angular/compiler": "^21.1.1",
+    "@angular/core": "^21.1.1",
+    "@angular/forms": "^21.1.1",
+    "@angular/platform-browser": "^21.1.1",
+    "@angular/platform-browser-dynamic": "^21.1.1",
+    "@angular/router": "^21.1.1",
+    "@angular/service-worker": "^21.1.1",
     "@ngrx/store": "21.0.0-beta.0",
     "@omnedia/ngx-fade": "^4.0.1",
     "@omnedia/ngx-number-ticker": "^4.0.1",
@@ -47,9 +47,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.3",
-    "@angular/cli": "21.0.3",
-    "@angular/compiler-cli": "21.0.5",
+    "@angular/build": "^21.0.4",
+    "@angular/cli": "^21.1.1",
+    "@angular/compiler-cli": "^21.1.1",
     "@compodoc/compodoc": "^1.1.32",
     "@eslint/js": "^9.33.0",
     "@ngrx/store-devtools": "21.0.0-beta.0",
